# lib_mysqludf_str

./: .gitignore  API  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.win32.txt  README.win64.txt  README.win64_build  README.win_build  README.win_x86.txt  RELEASE_CHECKLIST  char_vector.c  char_vector.h  config.h  config.h.in  configure  configure.ac  installdb.sql  installdb.win.sql  lib_mysqludf_str.c  lib_mysqludf_str.html  lib_mysqludf_str.sln  lib_mysqludf_str.vcxproj  lib_mysqludf_str.vcxproj.filters  libtool  uninstalldb.sql  xcopy_excludelist.txt
